# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /
 definitions:
-  userbalance.History:
+  models.History:
     properties:
       amount:
         type: integer
@@ -9,7 +9,7 @@ definitions:
       description:
         type: string
     type: object
-  userbalance.Money:
+  models.Money:
     properties:
       amount:
         type: integer
@@ -20,14 +20,14 @@ definitions:
       touserid:
         type: integer
     type: object
-  userbalance.Report:
+  models.Report:
     properties:
       amount:
         type: integer
       title:
         type: string
     type: object
-  userbalance.RequestHistory:
+  models.RequestHistory:
     properties:
       direction:
         type: string
@@ -36,19 +36,19 @@ definitions:
       userid:
         type: integer
     type: object
-  userbalance.RequestReport:
+  models.RequestReport:
     properties:
       fromdate:
         type: string
       todate:
         type: string
     type: object
-  userbalance.Response:
+  models.Response:
     properties:
       message:
         type: string
     type: object
-  userbalance.Transaction:
+  models.Transaction:
     properties:
       amount:
         type: integer
@@ -61,7 +61,7 @@ definitions:
       userid:
         type: integer
     type: object
-  userbalance.User:
+  models.User:
     properties:
       balance:
         type: integer
@@ -87,18 +87,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.User'
+          $ref: '#/definitions/models.User'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.User'
+            $ref: '#/definitions/models.User'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Get Balance
       tags:
       - balance
@@ -114,18 +114,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.Transaction'
+          $ref: '#/definitions/models.Transaction'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Cancel Reservation
       tags:
       - balance
@@ -141,18 +141,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.Transaction'
+          $ref: '#/definitions/models.Transaction'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Confirmation of funds
       tags:
       - balance
@@ -168,7 +168,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.RequestHistory'
+          $ref: '#/definitions/models.RequestHistory'
       produces:
       - application/json
       responses:
@@ -176,12 +176,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/userbalance.History'
+              $ref: '#/definitions/models.History'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Get History
       tags:
       - info
@@ -197,7 +197,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.RequestReport'
+          $ref: '#/definitions/models.RequestReport'
       produces:
       - application/json
       responses:
@@ -205,12 +205,12 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/userbalance.Report'
+              $ref: '#/definitions/models.Report'
             type: array
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Get Report
       tags:
       - info
@@ -226,18 +226,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.Transaction'
+          $ref: '#/definitions/models.Transaction'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Reservation of funds
       tags:
       - balance
@@ -253,18 +253,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.Transaction'
+          $ref: '#/definitions/models.Transaction'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Replenishment Balance
       tags:
       - balance
@@ -280,18 +280,18 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/userbalance.Money'
+          $ref: '#/definitions/models.Money'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
         "500":
           description: Internal Server Error
           schema:
-            $ref: '#/definitions/userbalance.Response'
+            $ref: '#/definitions/models.Response'
       summary: Money transfer
       tags:
       - balance
