# internal/models/report_easyjson.go
@@ -1,0 +1,137 @@
+// Code generated by easyjson for marshaling/unmarshaling. DO NOT EDIT.
+
+package models
+
+import (
+	json "encoding/json"
+	easyjson "github.com/mailru/easyjson"
+	jlexer "github.com/mailru/easyjson/jlexer"
+	jwriter "github.com/mailru/easyjson/jwriter"
+)
+
+// suppress unused package warning
+var (
+	_ *json.RawMessage
+	_ *jlexer.Lexer
+	_ *jwriter.Writer
+	_ easyjson.Marshaler
+)
+
+func easyjsonBd361432DecodeUserbalanceInternalModels(in *jlexer.Lexer, out *RequestReport) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		if in.IsNull() {
+			in.Skip()
+			in.WantComma()
+			continue
+		}
+		switch key {
+		case "fromdate":
+			out.FromDate = string(in.String())
+		case "todate":
+			out.ToDate = string(in.String())
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjsonBd361432EncodeUserbalanceInternalModels(out *jwriter.Writer, in RequestReport) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	{
+		const prefix string = ",\"fromdate\":"
+		out.RawString(prefix[1:])
+		out.String(string(in.FromDate))
+	}
+	{
+		const prefix string = ",\"todate\":"
+		out.RawString(prefix)
+		out.String(string(in.ToDate))
+	}
+	out.RawByte('}')
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v RequestReport) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjsonBd361432EncodeUserbalanceInternalModels(w, v)
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *RequestReport) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjsonBd361432DecodeUserbalanceInternalModels(l, v)
+}
+func easyjsonBd361432DecodeUserbalanceInternalModels1(in *jlexer.Lexer, out *Report) {
+	isTopLevel := in.IsStart()
+	if in.IsNull() {
+		if isTopLevel {
+			in.Consumed()
+		}
+		in.Skip()
+		return
+	}
+	in.Delim('{')
+	for !in.IsDelim('}') {
+		key := in.UnsafeFieldName(false)
+		in.WantColon()
+		if in.IsNull() {
+			in.Skip()
+			in.WantComma()
+			continue
+		}
+		switch key {
+		case "Title":
+			out.Title = string(in.String())
+		case "Amount":
+			out.Amount = int(in.Int())
+		default:
+			in.SkipRecursive()
+		}
+		in.WantComma()
+	}
+	in.Delim('}')
+	if isTopLevel {
+		in.Consumed()
+	}
+}
+func easyjsonBd361432EncodeUserbalanceInternalModels1(out *jwriter.Writer, in Report) {
+	out.RawByte('{')
+	first := true
+	_ = first
+	{
+		const prefix string = ",\"Title\":"
+		out.RawString(prefix[1:])
+		out.String(string(in.Title))
+	}
+	{
+		const prefix string = ",\"Amount\":"
+		out.RawString(prefix)
+		out.Int(int(in.Amount))
+	}
+	out.RawByte('}')
+}
+
+// MarshalEasyJSON supports easyjson.Marshaler interface
+func (v Report) MarshalEasyJSON(w *jwriter.Writer) {
+	easyjsonBd361432EncodeUserbalanceInternalModels1(w, v)
+}
+
+// UnmarshalEasyJSON supports easyjson.Unmarshaler interface
+func (v *Report) UnmarshalEasyJSON(l *jlexer.Lexer) {
+	easyjsonBd361432DecodeUserbalanceInternalModels1(l, v)
+}
